--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
          </div>
         </header>
-        <section id="janela">
+        <section class="janela">
             <button type="button" class="abrir">
                 <h2>Skills</h2>
             </button>
@@ -88,8 +88,8 @@
             </div>
         </section>
         <footer>
-            <a href="https://valinho.sp.senai.br" target="-blank">
-                <img src="assets/img/" alt="">
+            <a href="https://valinhos.sp.senai.br.com" target="-blank">
+                <img src="assets/img/SENAI_logo.png" alt="">
             </a>
         </footer>
     </main>
